# DefenderHuntMCP

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  agent_governance.py  auth_context.py  auth_policy.py  cache_backend.py  cache_runtime.py  cache_warmup.py  compose.yaml  config.py  deploy-full.ps1  deploy.ps1  entra_auth.py  export_contracts.py  graph_clients.py  pyproject.toml  query_safety.py  server.py  server_http.py  skills-lock.json  workflow_engine.py
contracts/: README.md  defender-hunt-mcp.v1.json
docs/: configuration.md  deployment.md  development.md  entra-existing-app-migration.md  security.md  tools.md
evaluations/: scenarios.json
infra/: main.bicep
tests/: test_agent_governance.py  test_auth_middleware.py  test_auth_policy.py  test_cache_backend.py  test_cache_runtime.py  test_cache_warmup.py  test_capabilities.py  test_contract_snapshot.py  test_correctness_regressions.py  test_entra_auth.py  test_error_sanitization.py  test_graph_clients.py  test_identity_access.py  test_identity_directory.py  test_identity_investigation.py  test_msgraph_sdk_compatibility.py  test_multi_hunt.py  test_query_safety.py  test_signin_timeout.py  test_tool_schemas.py  test_user_logon_investigation.py  test_workflow_engine.py
