[project]
name = "defender-hunt-mcp"
version = "2.0.0"
description = "MCP server for Microsoft Defender Advanced Hunting and Microsoft Entra ID"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "azure-identity>=1.15,<2",
    "mcp>=1.10,<2",
    "microsoft-kiota-abstractions>=1,<2",
    "msgraph-sdk>=1.2,<2",
    "pydantic>=2,<3",
    "python-dotenv>=1,<2",
    "starlette>=0.36,<2",
    "uvicorn>=0.27,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]